app/css/main.css
/* ... */
aside > .marker:first-child {
    margin-top: 3rem;
}

.marker-label {
    background-color: #FFF;
    display: block;
    padding: 4px;
    white-space: pre-wrap;
    width: 15px;
    word-wrap: break-word;
}

.headbar {
    box-shadow: 0 1px 8px rgba(0, 0, 0, .3);
    height: 2.2rem;
    margin-bottom: 0.3rem;
    perspective: 99999px;
    perspective-origin: top;
    transform-style: preserve-3d;
    transition: transform 0.6s ease-in-out;
}
.headbar.login {
    transform: rotateX(-90deg);
}

.headbar .side {
    align-items: center;
    backface-visibility:hidden;
    background-color: #fbfbfb;
    display: flex;
    position: absolute;
    height: 100%;
    width: 100%;
}

.headbar .front {
    justify-content: space-between;
    transform: translateZ(1.1rem);
}

.headbar.zoom .front {
    justify-content: flex-start;
}

.headbar .back {
    background-color: #03160a;
    color: #ffffff;
    justify-content: center;
    transform: rotateX(90deg) translateZ(1.1rem);
}

.headbar .menu {
    display: none;
    font-size: 1.5rem;
}
.headbar .menu.active {
    color: #83C22A;
}

.headbar .brand {
    color: #03160a;
    display: flex;
    font-family: 'HandyHandyRegular';
    font-size: 1.8rem;
    height: 35px;
    line-height: 36px;
    margin: 0;
    padding: 0 5px;
}

.headbar .delete {
    cursor: pointer;
    line-height: 2.2rem;
    margin-left: auto;
}

.headbar .info {
    line-height: 36px;
    margin: 0;
    padding-right: 1rem;
}

.headbar .date, .headbar .description {
    font-size: large;
    line-height: 36px;
    margin: 0;
}

.headbar .date.short {
    display: none;
}

.headbar .description {
    font-weight: bold;
}

.headbar input[name='description'] {
    margin-top: 4px;
    margin-left: 0.5rem;
    width: 20rem;
}

.headbar .extra {
    display: flex;
    flex-direction: row;
}

.headbar .btn {
    height: 1.5rem;
    line-height: 1.5rem;
}

.headbar.zoom .likes {
    cursor: pointer;
    line-height: 2.2rem;
    margin-left: auto;
    padding-right: 0.5rem;
}

.btn {
    background-color: #9e9e9e;
    border: none;
    border-radius: 5px;
    color: #fff;
    cursor: pointer;
    font-size: 1rem;
    height: 2rem;
    line-height: 2rem;
    margin: 0 .5rem;
    outline: 0;
    padding: 0 1rem;
    text-align: center;
}

.btn.primary {
    background-color: #3189c1;
}

main {
    padding-top: 2.4rem;
}

.grid {
    display: flex;
    padding-right: 22px;
    width: 100%;
}

.grid.line {
    flex-wrap: wrap;
}

div.line {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    margin: 0;
    width: 100%;
}

.item {
    margin-top: 0.3rem;
    position: relative;
}

.column .item {
    margin-top: 1%;
}

.column {
    padding-left: 0.6rem;
    width: 100%;
}

.column:last-child {
    padding-right: 0.6rem;
}

.item video, .item iframe, .item img {
    cursor: pointer;
    position: relative;
}

.column .item video, .column .item iframe, .column .item img {
    width: 100%;
}

.item img, .item video, .item iframe, .picture img, .picture iframe {
    -moz-box-shadow: 1px 1px 5px #999;
    -webkit-box-shadow: 1px 1px 5px #999;
    box-shadow: 1px 1px 5px #999;
}

.item img:hover, .item video:hover, .item iframe:hover {
    -moz-box-shadow: 2px 2px 6px #FFFFBC;
    -webkit-box-shadow: 2px 2px 6px #FFFFBC;
    box-shadow: 2px 2px 6px #FFFFBC;
}

.item .date, .item .description, .item .nb-comments, .item .likes {
    background: rgba(0, 0, 0, 0.5);
    color: #ffffff;
    font-size: large;
    margin: 0;
    padding: 4px 0;
    position: absolute;
    text-align: center;
    visibility: hidden;
    width: 100%;
}

.item:hover .date, .item:hover .description, .item:hover .nb-comments {
    visibility: visible;
}

.item .description {
    bottom: 4px;
    line-height: 1.5rem;
}
.item .date {
    font-size: medium;
    padding: 4px 5px;
    text-align: center;
    left: 0;
    top: 0;
    width: auto;
}

.item .nb-comments {
    bottom: auto;
    font-size: medium;
    padding: 4px 0 4px 5px;
    right: 0;
    top: 0;
    width: auto;
}

.item .likes {
    background: none;
    bottom: auto;
    cursor: pointer;
    font-size: medium;
    padding: 4px 0 4px 5px;
    right: 0;
    top: 0;
    visibility: visible;
    width: auto;
    z-index: 11;
}

.zoom {
    display: flex;
}

.picture {
    cursor: pointer;
    text-align: center;
    width: 80%;
}

.controls {
    text-align: left;
}

.help-inline {
    float: left;
    clear: both;
}

.videos .upload-video {
    margin: 0px 0 25px 0;
    text-align: center;
}
.upload-video input {
    width: 95%;
}

.modal form {
    display: flex;
    flex-wrap: wrap;
    height: 100%;
}
.modal .upload-image {
    margin: 10px;
    text-align: center;
    width: 260px;
}
.modal .upload-image input {
    width: 100%;
}
.modal .upload-image img {
    max-height: 240px;
    max-width: 240px;
    margin: auto;
}
.modal .upload-image-zone {
    border: 2px dashed lightgray;
    display: flex;
    height: 260px;
    line-height: 260px;
    margin-bottom: 10px;
    width: 260px;
}

form {
    text-align: center;
}

form.horizontal {
    display: flex;
    flex-direction: row;
}

form .form-field {
    align-items: center;
    display: flex;
    flex-direction: row;
    line-height: 1rem;
    margin-right: 1rem;
    padding: 0.3rem;
}

form .form-field-label {
    margin-right: 1rem;
}

input[type='text'], input[type='email'], input[type='password'], input[type='url'], input[type='date'] {
    background-color: #fff;
    border: 1px solid #ccc;
    border-radius: 3px;
    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
    color: #555;
    font-size: 14px;
    height: 20px;
    padding: 0.8rem 0.5rem;
    -webkit-transition: border linear .2s,box-shadow linear .2s;
    -moz-transition: border linear .2s,box-shadow linear .2s;
    transition: border linear .2s,box-shadow linear .2s;
}
/* ... */

